# algorithm_design

./: README.md
ch01/: ChangeLog.md  ch01.cabal  package.yaml
ch01/app/: Main.hs
ch01/src/: Lib.hs
ch03/: README.md  ch03.cabal  package.yaml
ch03/app/: Main.hs
ch03/src/Data/: RAList.hs  SymList.hs
ch03/test/: ListSpec.hs
ch03/test/Data/: RAListSpec.hs  SymListSpec.hs
